# susie

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/susie/: __init__.py  cli.py
tests/: test_cli.py
