[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "susie"
version = "0.1.0"
description = "A CLI tool to list and manage your last 20 shell commands."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyperclip",
    "rich",
]

[project.scripts]
susie = "susie.cli:main"
